correct js directory name

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,7 +4,7 @@
     <meta charset='UTF-8' />
     <meta name='viewport' content='width=device-width, initial-scale=1.0' />
     <title>Pet Beauty Pageant</title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link rel='stylesheet' href='/styles/style.css' />
   </head>
 
   <body>
@@ -30,7 +30,7 @@
       </footer>
     </div>
     {{#if loggedIn}}
-      <script src='/javascript/logout.js'></script>
+      <script src='/js/logout.js'></script>
     {{/if}}
   </body>
 
