--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -16,6 +16,6 @@
 {{> comments post.comments}}
 
 {{#if loggedIn}}
-  <script src='/javascript/comment.js'></script>
-  <script src='/javascript/upvote.js'></script>
+  <script src='/js/comment.js'></script>
+  <script src='/js/upvote.js'></script>
 {{/if}}
