clean up files for merge

--- a/views/partials/post-info.handlebars
+++ b/views/partials/post-info.handlebars
@@ -1,17 +1,23 @@
 <article class='post'>
+  <img
+    src='https://www.a2048.com/wp-content/uploads/2019/07/bc4a27df619fe52ade14f0d5a82d0f69.jpg'
+    alt=''
+  />
   <div class='title'>
-    <a href='{{post_url}}' target='_blank'>{{title}}</a>
+
+    <h1>{{title}}</h1>
     <span>({{format_url post_url}})</span>
+    <div class='meta'>
+      {{vote_count}}
+      {{format_plural 'vote' vote_count}}
+      | Uploaded by
+      {{user.username}}
+      on
+      {{format_date created_at}}
+      |
+      <a href='/post/{{id}}'>{{comments.length}}
+        {{format_plural 'comment' comments.length}}</a>
+    </div>
   </div>
-  <div class='meta'>
-    {{vote_count}}
-    {{format_plural 'point' vote_count}}
-    by
-    {{user.username}}
-    on
-    {{format_date created_at}}
-    |
-    <a href='/post/{{id}}'>{{comments.length}}
-      {{format_plural 'comment' comments.length}}</a>
-  </div>
+
 </article>
