--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -42,6 +42,72 @@ button:hover {
   padding: 0;
 }
 
+/* NEW STYLES START */
+
+li {
+  list-style-type: none;
+}
+
+h1 {
+  font-size: 30px;
+  font-weight: 200;
+  display: inline-block;
+  margin-top: 5px;
+}
+
+img {
+  height: 100px;
+  width: 100px;
+  margin-right: 30px;
+  border-radius: 10px;
+}
+
+.post {
+  display: flex;
+  margin-bottom: 50px;
+  line-height: 150%;
+  align-content: space-between;
+}
+
+header {
+  border-bottom: 1px solid #ccc;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 1%;
+  margin-bottom: 50px;
+}
+
+header {
+  text-align: center;
+  font-size: 14px;
+  padding: 0px 0 220px;
+  background-image: url('../images/chi-wow-wow.jpg');
+  background-position: center;
+  background-size: cover;
+  width: 100%;
+}
+
+header a {
+  color: white;
+  margin: 20px;
+  font-size: 20px;
+}
+
+.header h3 {
+  margin-bottom: 10px;
+  margin-right: 50px;
+  font-size: 16px;
+  font-weight: 400;
+}
+
+header a {
+  padding-top: 20px;
+  font-weight: 200;
+}
+
+/* NEW STYLES END */
+
 textarea,
 input {
   padding: 0.5%;
@@ -77,16 +143,10 @@ form label {
   flex-direction: column;
 }
 
-header {
-  border-bottom: 1px solid #ccc;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 0 1%;
-}
-
 header h1 {
   font-size: 1em;
+  padding-top: 20px;
+  font-weight: 200 !important;
 }
 
 main {
@@ -118,11 +178,6 @@ main {
 
 .delete-post-btn:hover {
   background-color: #ff643d;
-}
-
-.post {
-  margin-bottom: 2%;
-  line-height: 150%;
 }
 
 .post .title span {
