--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,7 +9,7 @@
 
   <body>
     <div class='wrapper'>
-      <header>
+      <header class='header'>
         <h1>
           <a href='/'>Pet Beauty Pageant</a>
         </h1>
@@ -26,7 +26,7 @@
         {{{body}}}
       </main>
       <footer>
-        <p>Made with ❤️ by Team Rockstars</p>
+        Thanks for visiting!
       </footer>
     </div>
     {{#if loggedIn}}
