--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -3,12 +3,12 @@
 
   <form class='new-post-form'>
     <div>
-      <label for='post-title'>Title</label>
-      <input type='text' id='post-title' name='post-title' />
+      <label for='post-name'>Name</label>
+      <input type='text' id='post-name' name='post-name' />
     </div>
     <div>
-      <label for='post-url'>Link</label>
-      <input id='post-url' name='post-url' />
+      <label for='pet_type'>Link</label>
+      <input id='pet_type' name='pet_type' />
     </div>
     <button type='submit' class='btn'>Create</button>
   </form>
