--- a/views/edit-post.handlebars
+++ b/views/edit-post.handlebars
@@ -5,8 +5,8 @@
   </h2>
   <form class="edit-post-form">
     <div>
-      <input name="post-title" type="text" value="{{post.title}}" />
-      <span>({{format_url post.post_url}})</span>
+      <input name="post-name" type="text" value="{{post.name}}" />
+      <span>({{format_url post.pet_type}})</span>
     </div>
     <div>
       {{post.vote_count}} {{format_plural "point" post.vote_count}} by you on {{format_date post.created_at}}
