--- a/views/partials/post-info.handlebars
+++ b/views/partials/post-info.handlebars
@@ -5,8 +5,8 @@
   />
   <div class='title'>
 
-    <h1>{{title}}</h1>
-    <span>({{format_url post_url}})</span>
+    <h1>{{name}}</h1>
+    <span>({{pet_type}})</span>
     <div class='meta'>
       {{vote_count}}
       {{format_plural 'vote' vote_count}}
