--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,6 +5,10 @@
     <meta name='viewport' content='width=device-width, initial-scale=1.0' />
     <title>Pet Beauty Pageant</title>
     <link rel='stylesheet' href='/styles/style.css' />
+    <script
+      src='https://kit.fontawesome.com/c663089620.js'
+      crossorigin='anonymous'
+    ></script>
   </head>
 
   <body>
