--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,5 +1,5 @@
 <section>
-  <h2>Create New Post</h2>
+  <h2>Nominate Your Pet!</h2>
 
   <form class='new-post-form'>
     <div>
@@ -7,8 +7,11 @@
       <input type='text' id='post-name' name='post-name' />
     </div>
     <div>
-      <label for='pet_type'>Link</label>
+      <label for='pet_type'>Pet Type</label>
       <input id='pet_type' name='pet_type' />
+    </div>
+    <div>
+      <button type='button' class='image-btn'>Add Image</button>
     </div>
     <button type='submit' class='btn'>Create</button>
   </form>
