--- a/views/partials/post-info.handlebars
+++ b/views/partials/post-info.handlebars
@@ -5,7 +5,7 @@
     alt=''
   />
   <div class='title'>
-    <i class='fas fa-chevron-circle-up fa-2x vote'></i>
+    <i class='fas fa-chevron-circle-up fa-2x vote upvote-btn'></i>
     <a href='/post/{{id}}'><h1>{{name}}</h1></a>
     <span class="pet-type">&nbsp;&nbsp;({{pet_type}})</span>
     <div class='meta votes'>
@@ -24,3 +24,4 @@
   </div>
 
 </article>
+
