--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,5 +1,6 @@
 <div class='form-page'>
   <form class='login-form'>
+    <h3>Login</h3>
     <div>
       <label for='email-login'>email:</label>
       <input type='text' id='email-login' />
@@ -14,6 +15,7 @@
   </form>
 
   <form class='signup-form'>
+    <h3>Sign Up </h3>
     <div>
       <label for='username-signup'>username:</label>
       <input type='text' id='username-signup' />
