--- a/views/partials/post-info.handlebars
+++ b/views/partials/post-info.handlebars
@@ -1,7 +1,7 @@
 <article class='post'>
 
   <img
-    src='https://www.a2048.com/wp-content/uploads/2019/07/bc4a27df619fe52ade14f0d5a82d0f69.jpg'
+    src='{{post.image}}'
     alt=''
   />
   <div class='title'>
