--- a/views/partials/post-info.handlebars
+++ b/views/partials/post-info.handlebars
@@ -5,7 +5,7 @@
     alt=''
   />
   <div class='title'>
-    <i class='fas fa-chevron-circle-up fa-2x vote upvote-btn'></i>
+    <button id='vote-btn'><span></span>Vote<i class='fas fa-chevron-circle-up fa-1x vote upvote-btn'></i></button>
     <a href='/post/{{id}}'><h1>{{name}}</h1></a>
     <span class="pet-type">&nbsp;&nbsp;({{pet_type}})</span>
     <div class='meta votes'>
