--- a/views/partials/post-info.handlebars
+++ b/views/partials/post-info.handlebars
@@ -1,11 +1,11 @@
 <article class='post'>
 
   <img
-    src='{{post.image}}'
+    src='{{image}}'
     alt=''
   />
   <div class='title'>
-    <button id='vote-btn'><span></span>Vote<i class='fas fa-chevron-circle-up fa-1x vote upvote-btn'></i></button>
+    <button id='vote-btn' class=" vote upvote-btn"><span></span>Vote<i class='fas fa-chevron-circle-up fa-1x'></i></button>
     <a href='/post/{{id}}'><h1>{{name}}</h1></a>
     <span class="pet-type">&nbsp;&nbsp;({{pet_type}})</span>
     <div class='meta votes'>
