--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,7 +1,7 @@
 <section>
   <h2>Nominate Your Pet!</h2>
 
-  <form class='new-post-form' enctype="multipart/form-data">
+  <form class='new-post-form' enctype="multipart/form-data" method="post">
     <div>
       <label for='post-name'>Name</label>
       <input type='text' id='post-name' name='post-name' />
