--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,14 +1,14 @@
 <section>
   <h2>Nominate Your Pet!</h2>
 
-  <form class='new-post-form' enctype="multipart/form-data" method="post">
+  <form class='new-post-form' enctype="multipart/form-data">
     <div>
       <label for='post-name'>Name</label>
       <input type='text' id='post-name' name='post-name' />
     </div>
     <div>
       <label for='pet_type'>Pet Type</label>
-      <input id='pet_type' name='pet_type' />
+      <input type="text" id='pet_type' name='pet_type' />
     </div>
     <div>
       <input type="file" name="image" id="image" />
