--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -8,6 +8,8 @@
 
     <div>
       <button type='submit'>add comment</button>
+      {{!-- <button type='button' class='upvote-btn'>upvote</button> --}}
+      {{!-- <button id='vote-btn' class="upvote-btn vote ">Vote<i class='fas fa-chevron-circle-up fa-1x'></i></button> --}}
     </div>
   </form>
 {{/if}}
@@ -16,7 +18,6 @@
 
 {{#if loggedIn}}
   <script src='/js/comment.js'></script>
-  <script src='/js/upvote.js'></script>
 {{/if}}
 
 
