--- a/views/partials/post-info.handlebars
+++ b/views/partials/post-info.handlebars
@@ -27,6 +27,6 @@
 
 </article>
 
-{{!-- {{#if loggedIn}} --}}
+{{!-- {{#if loggedIn}}
   <script src='/js/upvote.js'></script>
-{{!-- {{/if}} --}}
+{{/if}} --}}
