code working now

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,10 +1,10 @@
 <section>
   <h2>Nominate Your Pet!</h2>
 
-  <form class='new-post-form' enctype="multipart/form-data">
+  <form id='post-form' class='new-post-form' enctype="multipart/form-data">
     <div>
       <label for='post-name'>Name</label>
-      <input type='text' id='post-name' name='post-name' />
+      <input type='text' id='post-name' name='name' />
     </div>
     <div>
       <label for='pet_type'>Pet Type</label>
