partial handlebar restructure

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,5 +1,12 @@
 <section>
   <h2>Nominate Your Pet!</h2>
+  
+  <form class='new-post-form' enctype="multipart/form-data">
+        <div>
+      <input type="file" name="image" id="image" />
+    </div>
+    <button type='submit' class='btn'>Create</button>
+  </form>
 
   <form class='new-post-form' enctype="multipart/form-data">
     <div>
@@ -10,10 +17,6 @@
       <label for='pet_type'>Pet Type</label>
       <input type="text" id='pet_type' name='pet_type' />
     </div>
-    <div>
-      <input type="file" name="image" id="image" />
-    </div>
-    <button type='submit' class='btn'>Create</button>
   </form>
 </section>
 
