hide vote button when logged in

--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -8,6 +8,9 @@
 
     <div>
       <button type='submit'>add comment</button>
+          <button id='vote-btn' class="upvote-btn vote ">Vote
+      <i class='fas fa-chevron-circle-up fa-1x'></i>
+      </button>
     </div>
   </form>
 {{/if}}
