fixed upvote issues

--- a/views/partials/post-info.handlebars
+++ b/views/partials/post-info.handlebars
@@ -5,9 +5,9 @@
     alt=''
   />
   <div class='title'>
-    <button id='vote-btn' class="upvote-btn vote ">Vote
+    {{!-- <button id='vote-btn' class="upvote-btn vote ">Vote
       <i class='fas fa-chevron-circle-up fa-1x'></i>
-      </button>
+      </button> --}}
     <a href='/post/{{id}}'><h1>{{name}}</h1></a>
     <span class="pet-type">&nbsp;&nbsp;({{pet_type}})</span>
     <div class='meta votes'>
