--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -8,8 +8,7 @@
 
     <div>
       <button type='submit'>add comment</button>
-      {{!-- <button type='button' class='upvote-btn'>upvote</button> --}}
-      {{!-- <button id='vote-btn' class="upvote-btn vote ">Vote<i class='fas fa-chevron-circle-up fa-1x'></i></button> --}}
+      <button type='button' class='upvote-btn'>upvote</button>
     </div>
   </form>
 {{/if}}
