--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -7,8 +7,8 @@
     </div>
 
     <div>
-      <button type='submit'>add comment</button>
-      <button type='button' class='upvote-btn'>upvote</button>
+      <button type='submit'>Add Comment</button>
+      <button type='button' class='upvote-btn'>Upvote</button>
     </div>
   </form>
 {{/if}}
