--- a/views/edit-post.handlebars
+++ b/views/edit-post.handlebars
@@ -1,5 +1,5 @@
 <article>
-  <a href="/dashboard"> &larr; Back to dashboard</a>
+  <a href="/dashboard"> &larr; Back To Dashboard</a>
   <h2>
     Edit Post
   </h2>
@@ -14,8 +14,8 @@
       <a href="/post/{{post.id}}">{{post.comments.length}} {{format_plural "comment" post.comments.length}}</a>
     </div>
     
-    <button type="submit">Save post</button>
-    <button type="button" class="delete-post-btn">Delete post</button>
+    <button type="submit">Save Post</button>
+    <button type="button" class="delete-post-btn">Delete Post</button>
   </form>
 </article>
 
@@ -25,7 +25,7 @@
   </div>
 
   <div>
-    <button type="submit">add comment</button>
+    <button type="submit">Add Comment</button>
   </div>
 </form>
 
