last minute changes

--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -7,7 +7,7 @@
     </div>
 
     <div>
-      <button type='submit'>add comment</button>
+      <button type='submit'>Add Comment</button>
           <button id='vote-btn' class="upvote-btn vote ">Vote
       <i class='fas fa-chevron-circle-up fa-1x'></i>
       </button>
