--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,7 +3,7 @@
   <head>
     <meta charset='UTF-8' />
     <meta name='viewport' content='width=device-width, initial-scale=1.0' />
-    <title>Pawfect: Pet Beauty Pageant</title>
+    <title>Pet Beauty Pageant</title>
     <link rel='stylesheet' href='/styles/style.css' />
     <script
       src='https://kit.fontawesome.com/c663089620.js'
@@ -15,7 +15,7 @@
     <div class='wrapper'>
       <header class='header'>
         <h1>
-          <a href='/'>Let's Be Pawfect</a>
+          <a href='/'>Pet Beauty Pageant</a>
         </h1>
         <h2 id='title'>Flaunt Your Stuff!</h2>
         <nav>
