--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,37 +1,18 @@
-<div class='form-page'>
-  <form class='login-form'>
-    <h3>Login</h3>
-    <div>
-      <label for='email-login'>Email:</label>
-      <input type='text' id='email-login' />
-    </div>
-    <div>
-      <label for='password-login'>Password:</label>
-      <input type='password' id='password-login' />
-    </div>
-    <div>
-      <button type='submit'>Login</button>
-    </div>
-  </form>
+<form class='login-form'>
+  <h2>Login</h2>
+  <div>
+    <label for='email-login'>Email:</label>
+    <input type='text' id='email-login' />
+  </div>
+  <div>
+    <label for='password-login'>Password:</label>
+    <input type='password' id='password-login' />
+  </div>
+  <div>
+    <button id='login-submit' type='submit'>Login</button>
+    <a class='login-link' href='/signup'>Sign up first?</a>
+  </div>
 
-  <form class='signup-form'>
-    <h3>Sign Up </h3>
-    <div>
-      <label for='username-signup'>Username:</label>
-      <input type='text' id='username-signup' />
-    </div>
-    <div>
-      <label for='email-signup'>Email:</label>
-      <input type='text' id='email-signup' />
-    </div>
-    <div>
-      <label for='password-signup'>Password:</label>
-      <input type='password' id='password-signup' />
-    </div>
-    <div>
-      <button type='submit'>Signup</button>
-    </div>
-  </form>
-</div>
+</form>
 
 <script src='/js/login.js'></script>
