--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,9 +15,9 @@
     <div class='wrapper'>
       <header class='header'>
         <h1>
-          <a href='/'>Pet Beauty Pageant</a>
+          <a href='/'>Pawfect</a>
         </h1>
-        <h2 id='title'>Flaunt Your Stuff!</h2>
+        <h2 id='title'>Nominate Your Pet!</h2>
         <nav>
           {{#if loggedIn}}
             <a href='/dashboard'>Dashboard</a>
@@ -31,7 +31,7 @@
         {{{body}}}
       </main>
       <footer>
-        Thanks For Visiting!
+        Please sign up or log in to nominate your pet and vote!
       </footer>
     </div>
     {{#if loggedIn}}
