--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -51,7 +51,6 @@ h1 {
   font-weight: 200;
   display: inline-block;
   margin-top: 5px;
-  margin-bottom: 40px;
 }
 
 img {
@@ -71,8 +70,20 @@ img {
   text-shadow: 2px 2px #ae3fb9;
 }
 
-.nav-bar {
-  margin-top: -60 !important;
+nav {
+  display: flex;
+  justify-content: space-between;
+  margin: 15px;
+  padding: 20px;
+  align-items: flex-start;
+}
+
+header a {
+  font-size: 20px;
+}
+
+header h1 {
+  margin-top: 0px;
 }
 
 .post {
@@ -85,16 +96,10 @@ img {
 
 header {
   border-bottom: 1px solid #ccc;
-  display: flex;
-  justify-content: space-between;
   align-items: center;
-  padding: 0 1%;
   margin-bottom: 50px;
-}
-
-header {
   text-align: center;
-  font-size: 14px;
+  font-size: 16px;
   padding: 0px 0 150px;
   background-image: url('../images/chi-wow-wow.jpg');
   background-position: center;
@@ -104,8 +109,7 @@ header {
 
 header a {
   color: white;
-  margin: 20px;
-  font-size: 20px;
+  font-weight: 200;
 }
 
 .header h3 {
@@ -113,11 +117,6 @@ header a {
   margin-right: 50px;
   font-size: 16px;
   font-weight: 400;
-}
-
-header a {
-  padding-top: 20px;
-  font-weight: 200;
 }
 
 .vote {
@@ -190,9 +189,7 @@ form label {
 }
 
 header h1 {
-  font-size: 1em;
-  padding-top: 20px;
-  font-weight: 200 !important;
+  font-weight: 200;
 }
 
 main {
@@ -249,13 +246,13 @@ main {
   transition: background-color 0.1s;
 }
 
-#vote-btn {
+/* #vote-btn {
   padding: 12px 20px 11px 20px;
   color: white;
   font-size: 12px;
   margin-right: 20px;
   cursor: pointer;
-}
+} */
 
 .comment-form {
   margin-bottom: 5%;
@@ -312,19 +309,21 @@ footer {
     font-size: 25px;
   }
 
-  .title {
+  /* header h1 {
+    display: none;
+  } */
+
+  #title {
     display: flex;
     flex-direction: column;
+    font-size: 40px;
   }
 
   .comment-by {
     display: none;
   }
 
-  #vote-btn {
-    font-size: 20px;
-    padding: 17px 5px 0px 16px;
-    margin-right: 30px;
-    margin-bottom: 10px;
+  button {
+    padding: 3%;
   }
 }
